# border-image-slice-bug-example

./: example.gresource.xml  example.vala  meson.build
